# gtkapp

./: Makefile.am  README.md  app.desktop  configure.ac  gtkapp.desktop  main.c
